force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Meth_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Meth_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplateMethodologyColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project Methodology object. This field set defines the methodology fields that are editable when creating a project from a template.</description>
    <inlineHelpText>The API name of a field set used by the Methodology object. This field set defines the methodology fields that are editable when creating a project from a template.</inlineHelpText>
    <label>Project Methodology Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>