force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Phase_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Phase_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplatePhaseColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project Phase object. This field set defines the project phase fields that are editable when creating a project from a template.</description>
    <inlineHelpText>The API name of a field set used by the Project Phase object. This field set defines the project phase fields that are editable when creating a project from a template.</inlineHelpText>
    <label>Project Phase Editable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>